Sutter Health/src/objects/KM_Feedback_Item__c.object
<CustomObject>
    <description>Knowledge Feedback</description>
    <fields>
        <fullName>Affiliate__c</fullName>
        <label>Affiliate</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arcticle_Helpfull__c</fullName>
        <label>Was this article helpful?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ArticleURL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; RIGHT(Article_URL__c,18)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Title__c</fullName>
        <label>Article Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_URL__c</fullName>
        <label>Article URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Knowledge Champion Comments</description>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Content_Rate__c</fullName>
        <label>Content Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Bad</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>By when should this request be fulfilled/completed?</description>
        <inlineHelpText>By when should this request be fulfilled/completed?</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feedback_Reason__c</fullName>
        <label>Feedback Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Access Issue</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Positive Feedback</fullName>
                </value>
                <value>
                    <fullName>Negative Feedback</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
                <value>
                    <fullName>Multiple Issues</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <label>Comments/Suggestions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reported By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>KM_Feedback_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reported_On__c</fullName>
        <label>Reported On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Pending Review</fullName>
                </value>
                <value>
                    <fullName>Closed - Completed</fullName>
                </value>
                <value>
                    <fullName>Closed - No Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Function__c</fullName>
        <label>Sub-Function</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitter_Profile__c</fullName>
        <label>Submitter Profile</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_feedback__c</fullName>
        <label>Type of Feedback</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Access Issue</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>URL Issue</fullName>
                </value>
                <value>
                    <fullName>Multiple Issues</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>KM Feedback Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Comments__c</columns>
        <columns>Feedback__c</columns>
        <columns>Reported_By__c</columns>
        <columns>Reported_On__c</columns>
        <columns>Article_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>KM_Feedback</fullName>
        <columns>NAME</columns>
        <columns>Article_Title__c</columns>
        <columns>Feedback__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Reported_By__c</columns>
        <columns>Reported_On__c</columns>
        <filterScope>Queue</filterScope>
        <label>KM Feedback</label>
        <queue>KM_Feedback</queue>
        <sharedTo>
            <group>KM_Feedback_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>KM Feedback Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KM Feedback Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>